Fix overflow bar bug

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(----background);
+  overflow-x: hidden;
 }
 
 code {
